static/main.css
body {
    margin: 0px;
    font: normal normal medium 18px/18px Helvetica Neue;
    letter-spacing: 0px;
    overflow-x: hidden;
}

.nav-link {
    text-align: left;
    letter-spacing: 0px;
    color: #FFFFFF;
    opacity: 1;
}

.navbar {
    background-color: transparent;
    transition: background-color 1s ease;
}

.navbar.navbar-solid {
    background-color: #fff;
    box-shadow: 0 2px 4px rgba(0, 0, 0, .2);
}

.navbar.navbar-solid .navbar-brand,
.navbar.navbar-solid .nav-link {
    color: #333;
    transition: color 0.3s ease;
}

.navbar.navbar-solid .navbar-brand:hover,
.navbar.navbar-solid .nav-link:hover {
    color: #555;
}

.row {
    margin: 0;
}

/* Desktop-CSS  */

.p-text {
    color: grey;
}

.start-content-d {
    margin-left: 10vh;
    margin-top: 30vh;
    font-size: 20/24px;
}

.start-d {
    padding: 0px;
    background-image: url('template-img.jpeg');
    background-size: cover;
    height: 100vh;
}

.start-text-d {
    text-align: left;
    color: white;
}

.curved {
    width: 100%;
}


.curved-1 {
    position: absolute;
    bottom: 0;
    left: 0;
    z-index: 0;
}

.curved-2 {
    position: absolute;
    bottom: 0;
    left: 0;
    z-index: 1;
}

.curved-3 {
    position: absolute;
    bottom: 0;
    left: 0;
    z-index: 1;
}

.bg-beige {
    background-color: #F5F3EE;
}

.card-link {
    width: 220px;
    height: 300px;
    text-align: center;
    border-radius: 5px;
}


.card-link img {
    width: 50%;
    height: auto;
}

.card-link:hover {
    background-color: white;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    transition: 0.5s;
}

.card-link:hover img {
    transform: scale(1.1);
    transition: 0.5s;
}

.card-link:hover h4 {
    transform: scale(1.1);
    transition: 0.5s;
}

.card-link-2 {
    width: 280px;
    height: 330px;
    text-align: center;
    border-radius: 20px;
    box-shadow: 0px 6px 6px #00000029;
    background: white;
    display: flex;
    align-items: center;
    flex-direction:column;
    justify-content: center;
}

.card-link-2 img {
    width: 100%;
    height: 100%;
    border-radius: 20px;
    object-fit: cover;

}

.png-pic-cont {
    position: relative;
}

.pic-component {
    height: 100vh;
}

.png-design {
    width: 50%;
    height: 100%;
    justify-content: center;
}

.png-design img {
    object-fit: contain;
    width: 100%;
    height: 100%;
}

.design-pic {
    display: flex;
    padding-left: 15vh;
    align-items: center;
    position: absolute;
    height: 100%;
    width: 100%;
    bottom: 0;
}

.design-pic img {
    object-fit: cover;
    border-radius: 20px;
    height: 50%;
    width: 80%;
}

.png-pic-text-cont {}

